--- a/client/src/style/site.scss
+++ b/client/src/style/site.scss
@@ -19,3 +19,17 @@ body {
 .ReactTable {
 	background-color: $react-table-color;
 }
+.btn-update {
+	color:#ef9b0f;
+	cursor: pointer;
+}
+.btn-delete {
+	color: #ff0000;
+	cursor: pointer;
+}
+.table-padding {
+	padding: 0 40px 40px 40px;
+}
+.margin-5p {
+	margin: 5px;
+}
